<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.myquiz.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_12_dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:text="@string/quiz_into"
            android:layout_weight="8"
            android:textStyle="bold"/>
        <ImageView
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:src="@drawable/qatar"
            android:layout_weight="1"/>
        </LinearLayout>
        <TextView
            style="@style/TextViewStyle"
            android:text="@string/taker_name"
            android:textAllCaps="true"
            android:textSize="@dimen/_20_sp_header"
            android:textStyle="italic"/>
        <EditText
            android:id="@+id/s_name"
            style="@style/TextViewStyle"
            android:hint="@string/enter_name"
            android:inputType="textCapWords" />
        <TextView
            style="@style/TextViewStyle"
            android:text="@string/questions"
            android:textAllCaps="true"
            android:textSize="@dimen/_20_sp_header"
            android:textStyle="italic"/>
        <TextView
            style="@style/TextViewStyle"
            android:text="@string/q_1"/>
        <RadioGroup
            android:id="@+id/r_group"
            style="@style/TextViewStyle"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/rdo_africa"
                style="@style/RadioStyle"
                android:text="@string/africa" />
            <RadioButton
                android:id="@+id/rdo_europe"
                style="@style/RadioStyle"
                android:text="@string/europe"/>
            <RadioButton
                android:id="@+id/rdo_asia"
                style="@style/RadioStyle"
                android:text="@string/asia"/>
        </RadioGroup>
        <TextView
            style="@style/TextViewStyle"
            android:text="@string/q_2"/>
        <CheckBox
            android:id="@+id/chk_agri"
            style="@style/RadioStyle"
            android:text="@string/agriculture"
            android:layout_marginRight="@dimen/_8_dp"
            android:onClick="onCheckBoxClicked"/>
        <CheckBox
            android:id="@+id/chk_gas"
            style="@style/RadioStyle"
            android:text="@string/gas"
            android:layout_marginRight="@dimen/_8_dp"
            android:onClick="onCheckBoxClicked"/>
        <CheckBox
            android:id="@+id/chk_petro"
            style="@style/RadioStyle"
            android:text="@string/petroleum"
            android:layout_marginRight="@dimen/_8_dp"
            android:onClick="onCheckBoxClicked"/>
        <TextView
            style="@style/TextViewStyle"
            android:text="@string/q_3"/>
        <ImageView
            style="@style/TextViewStyle"
            android:src="@drawable/qatar_map"
            android:scaleType="centerCrop"/>
        <EditText
            android:id="@+id/city_name"
            style="@style/TextViewStyle"
            android:hint="@string/city_name"
            android:textSize="14sp"/>
        <TextView
            style="@style/TextViewStyle"
            android:text="@string/q_4"/>
        <EditText
            android:id="@+id/ind_year"
            style="@style/TextViewStyle"
            android:hint="@string/independence_year"
            android:inputType="number"
            android:textSize="14sp"/>
        <TextView
            style="@style/TextViewStyle"
            android:text="@string/result"
            android:textAllCaps="true"
            android:textSize="@dimen/_20_sp_header"
            android:textStyle="italic"/>
        <TextView
            android:id="@+id/text_view_result"
            style="@style/TextViewStyle"
            android:text="@string/r_0"
            android:textSize="@dimen/_20_sp_header"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_result"
            android:layout_gravity="center_horizontal"
            android:onClick="showResult"/>
    </LinearLayout>
</ScrollView>
